--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -21,9 +21,13 @@
 <body>
     <nav>
         <div class="nav-wrapper green">
-            <a class="brand-logo">
+            <a class="brand-logo hide-on-med-and-down left">
             <img src="{% static '/img/mythical-large.png' %}" height="12%" width = "12%" style = "padding:20px;"/>
             </a>
+            <a class="brand-logo hide-on-large-only left">
+            <img src="{% static '/img/mythical-large.png' %}" height="80px" width = "80px"/>
+            </a>
+            <div class="center" style="font-size: 200%;">Mythical Learning</div>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="sass.html">Sass</a></li>
                 <li><a href="badges.html">Components</a></li>
