--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -11,6 +11,8 @@
     <!-- JS Files -->
     <script src="{% static 'js/materialize.js' %}"></script>
     <script src="{% static 'js/materialize.min.js' %}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="{% static 'js/main.js' %}"></script>
 
     <!-- CSS Files -->
     <link rel="stylesheet" href="{% static 'css/materialize.css' %}" type="text/css" />
@@ -19,20 +21,18 @@
 </head>
 
 <body>
+<div class="progress" id = "progress" style="position: relative;display: none;">
+      <div class="indeterminate"></div>
+  </div>
     <nav>
         <div class="nav-wrapper green">
             <a class="brand-logo hide-on-med-and-down left">
-            <img src="{% static '/img/mythical-large.png' %}" height="12%" width = "12%" style = "padding:20px;"/>
+                <img src="{% static '/img/mythical-large.png' %}" height="12%" width="12%" style="padding:20px;" />
             </a>
             <a class="brand-logo hide-on-large-only left">
-            <img src="{% static '/img/mythical-large.png' %}" height="80px" width = "80px"/>
+                <img src="{% static '/img/mythical-large.png' %}" height="80px" width="80px" />
             </a>
             <div class="center" style="font-size: 200%;">Mythical Learning</div>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <li><a href="collapsible.html">JavaScript</a></li>
-            </ul>
         </div>
     </nav>
     <div class="container">
