#3 SignUp, Login, Home with confimation mail(bug)

--- a/home/templates/account_activation_invalid.html
+++ b/home/templates/account_activation_invalid.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block pagecontent %}
   <p>The confirmation link was invalid, possibly because it has already been used.</p>
 {% endblock %}
