--- a/home/templates/account_activation_sent.html
+++ b/home/templates/account_activation_sent.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block pagecontent %}
   <p>Please confirm your email address to complete the registration. </p>
 {% endblock %}
