--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block content %}
+{% block pagecontent %}
   <h2>Welcome, {{ user.get_full_name }} <small>{{ user.username }}</small>!</h2>
   <p>Thanks for confirming your email address!</p>
 {% endblock %}
