--- a/home/templates/registration/password_reset_form.html
+++ b/home/templates/registration/password_reset_form.html
@@ -1,12 +1,10 @@
 {% extends 'base.html' %}
 
 {% block pagecontent %}
-
-  <p class="flow-text" style="font-size: 42px;">Sign Up</p>
+  <h3>Forgot password</h3>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="btn">Sign up</button>
+    <button type="submit" class="btn">Submit</button>
   </form>
-
 {% endblock %}
