--- a/home/templates/home/main_home.html
+++ b/home/templates/home/main_home.html
@@ -7,13 +7,13 @@
 <body>
 
     {% block largepagecontent %}
-    <div class="row black" style="color: white">
-        <div class="container" style="padding-top: 50px;">
-            <div class="col s6 flow-text">
+    <div class="row black" style="color: white; padding-bottom: 50px;">
+        <div style="padding: 5%;">
+            <div class="col s12 m6 flow-text">
                 <b><p style="font-size: 42px;">Built to encourage reading</p></b>
                 <p style="font-size: 24px;">Mythical Learning provides a platform for developers to read source code according to their choice in quick and in efficient way. With our site anyone can learn, develop and its all free.</p>
             </div>
-            <div class="col s6 flow-text hide-on-med-and-down left">
+            <div class="col s12 m6 flow-text hide-on-med-and-down left">
                 <center><p style="font-size: 32px;">Still Developing !</p></center>
             </div>
         </div>
@@ -57,9 +57,9 @@
     <center><p class="flow-text" style="font-size: 42px">Get data from famous sources</p></center>
     <br><br>
       <div class="row">
-    <div class="col s12 m6 l3"><p><img src="https://i.stack.imgur.com/MybMA.png" width="100%" height="100%" /></p></div>
-    <div class="col s12 m6 l3"><p><img src="https://s3.amazonaws.com/codechef_shared/sites/all/themes/abessive/logo.png" width="100%" height="100%" /></p></div>
-    <div class="col s12 m6 l3"><p><img src="http://st.codeforces.com/s/10438/images/codeforces-logo-with-telegram.png" width="100%" height="100%" /></p></div>
+    <div class="col s12 m6 l3 center"><p><img src="https://i.stack.imgur.com/MybMA.png" width="50%" height="50%" /></p></div>
+    <div class="col s12 m6 l3 center"><p><img src="https://s3.amazonaws.com/codechef_shared/sites/all/themes/abessive/logo.png" width="50%" height="50%" /></p></div>
+    <div class="col s12 m6 l3 center"><p><img src="http://st.codeforces.com/s/10438/images/codeforces-logo-with-telegram.png" width="50%" height="50%" /></p></div>
     <br>
     <br>
   </div>
