--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -9,15 +9,16 @@
     </title>
 
     <!-- JS Files -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="{% static 'js/materialize.js' %}"></script>
     <script src="{% static 'js/materialize.min.js' %}"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="{% static 'js/main.js' %}"></script>
 
     <!-- CSS Files -->
     <link rel="stylesheet" href="{% static 'css/materialize.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/materialize.min.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/main.css' %}" type="text/css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
 
@@ -88,7 +89,6 @@ document.onreadystatechange = function () {
       },1000);
   }
 }
-
 </script>
 </body>
 <!--
