Fix bug related Password reset

--- a/home/templates/registration/password_reset_email.html
+++ b/home/templates/registration/password_reset_email.html
@@ -1,5 +1,7 @@
 {% autoescape off %}
-To initiate the password reset process for your {{ user.get_username }} TestSite Account,
+
+Hello Mythical Beast
+To initiate the password reset process for your {{ user.get_username }} Account,
 click the link below:
 
 {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
@@ -7,6 +9,8 @@ click the link below:
 If clicking the link above doesn't work, please copy and paste the URL in a new browser
 window instead.
 
+For more information contact - shashank.sharma98@gmail.com
+
 Sincerely,
-The TestSite Team
+Mythical Learning Team
 {% endautoescape %}
