--- a/home/templates/registration/password_reset_confirm.html
+++ b/home/templates/registration/password_reset_confirm.html
@@ -6,7 +6,7 @@
     <form method="post">
       {% csrf_token %}
       {{ form.as_p }}
-      <button type="submit">Change password</button>
+      <button type="submit" class="btn">Change password</button>
     </form>
   {% else %}
     <p>
