#3 Settings, Dashboard added for logged in users + more pages

--- a/home/templates/404.html
+++ b/home/templates/404.html
@@ -1,3 +1,4 @@
 {% extends 'base.html' %} {% block pagecontent %}
-<h1>OH no</h1>
+<h1>Oh no, There is nothing to show here.</h1>
+<h4>Rawwrrr!</h4>
 {% endblock %}
