--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -41,7 +41,17 @@
             <li><a href="/">Home</a></li>
             <li><a href="/about">About</a></li>
             <li><a href="/faq">FAQ</a></li>
+            {% if user.is_authenticated %}
+            <li class="right"><a href = "" data-activates='dropdown0' class='dropdown-button'><i class="large material-icons">perm_identity</i></a></li>
+              <ul id='dropdown0' class='dropdown-content white'>
+                <li><a href="/dashboard">Profile</a></li>
+                <li><a href="/settings">Settings</a></li>
+                <li class="divider"></li>
+                <li><a href="/logout">Log out</a></li>
+              </ul>
+            {% else %}
             <li><a href="/login">Log In</a></li>
+            {% endif %}
             </ul>
         </div>
     </nav>
@@ -89,6 +99,17 @@ document.onreadystatechange = function () {
       },1000);
   }
 }
+      $('.dropdown-button').dropdown({
+        inDuration: 300,
+        outDuration: 225,
+        constrainWidth: false, // Does not change width of dropdown to that of the activator
+        hover: true, // Activate on hover
+        gutter: 0, // Spacing from edge
+        belowOrigin: false, // Displays dropdown below the button
+        alignment: 'left', // Displays dropdown with edge aligned to the left of button
+        stopPropagation: false // Stops event propagation
+      }
+    );
 </script>
 </body>
 <!--
