--- a/home/templates/registration/password_reset_complete.html
+++ b/home/templates/registration/password_reset_complete.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block pagecontent %}
-  <p>
-    Your password has been set. You may go ahead and <a href="{% url 'signin' %}">sign in</a> now.
+  <p class = "flow-text">
+  Your password has been set. You may go ahead and Log in.<br><a href="/login" class = "btn">Log in</a>
   </p>
 {% endblock %}
