#15 #14 #13 Problem page with models

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -110,6 +110,9 @@ document.onreadystatechange = function () {
         stopPropagation: false // Stops event propagation
       }
     );
+      $(document).ready(function(){
+    $('.tooltipped').tooltip({delay: 50});
+  });
 </script>
 </body>
 <!--
