--- a/home/templates/faq.html
+++ b/home/templates/faq.html
@@ -3,7 +3,7 @@
 <p class="flow-text center" style="font-size: 42px;">FAQ</p>
 <hr class="container">
 <p class="flow-text" style="">No one likes to get stuck. So let's search about your problem:</p>
-<a href="fcontact">I need to contact to admin</a>
+<a href="contact">I need to contact to admin</a>
 <br>
-<a href = "fsecurity">I am little bit concerned about my Security</a>
+<a href = "security">I am little bit concerned about my Security</a>
 {% endblock %}
