#18 Create Add answer model and answers.html

--- a/home/templates/answers.html
+++ b/home/templates/answers.html
@@ -1,8 +1,12 @@
 {% extends 'base.html' %} {% block pagecontent %}
-<p class="flow-tex">Answers</p>
-{% for e in answers %}
-<p>{{ e }}</p>
-{% endfor %}
+<p class="flow-text">Answers</p>
 <hr>
+{% for id, language, answer, t, question, s in answers %}
+<p>Language: {{ language }}</p>
+<p>Answer: {{ answer }}</p>
+<p>Question: {{ question }}
+<hr class = "container">
+{% endfor  %}
+<p class = "flow-text">Current active language</p>
 <p>{{ language }}</p>
 {% endblock %}
