--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -49,11 +49,11 @@
       <div class="indeterminate"></div>
   </div>
             <a class="brand-logo hide-on-med-and-down left">
-                <img src="{% static '/img/mythical-large.png' %}" height="8%" width="8%" style="padding:4px;padding-left: 30px" />
+                <a href = "/"><img src="{% static '/img/mythical-large.png' %}" height="8%" width="8%" style="padding:4px;padding-left: 30px" /></a>
             </a>
             <a href="#" data-activates="slide-out" class="button-collapse"><i class="large material-icons">menu</i></a>
             <a class="brand-logo hide-on-large-only right">
-                <img src="{% static '/img/mythical-large.png' %}" height="50px" width="40px" style="padding-top:8px;"/>
+                <a href = "/"><img src="{% static '/img/mythical-large.png' %}" height="50px" width="40px" style="padding-top:8px;"/></a>
             </a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="/about">About</a></li>
