--- a/scrapper/templates/scrapper/problem.html
+++ b/scrapper/templates/scrapper/problem.html
@@ -27,14 +27,13 @@
 
 </div>
 </div>
-
-
+<h1>Trying hard</h1>
 <a class="waves-effect waves-light btn get-link">Get</a>
 <hr>
 <p id="problemq" style="font-size: 12px;"><h3 class="flow-text">Get your first question ...</h3></p>
 <p id="problemlink"></p>
 <div id="problema" style="display: none;">
-<p class="flow-text" style="font-size: 42px;">Answers</p>
+<p class="flow-text" style="font-size: 42px;">Answers <a class="btn btn-floating btn-large pulse red loadd" id="save-lang4" style="display: none;" data-position="top" data-delay="50" data-tooltip="Loading ..."><i class="material-icons">swap_vertical_circle</i></a></p>
 <hr class="container">
 <br>
 <a class="waves-effect waves-light btn get-answer">Get</a>
