#22 Blog page edititted

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -138,6 +138,19 @@ document.onreadystatechange = function () {
     }
   );
   });
+        $(document).ready(function(){
+    // the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
+      $('.modal').modal({
+      dismissible: true, // Modal can be dismissed by clicking outside of the modal
+      opacity: .8, // Opacity of modal background
+      inDuration: 300, // Transition in duration
+      outDuration: 200, // Transition out duration
+      startingTop: '1%', // Starting top style attribute
+      endingTop: '1%', // Ending top style attribute
+      //complete: function() { alert('Closed'); } // Callback for Modal close
+    }
+  );
+  });
 </script>
 </body>
 <!--
