--- a/scrapper/templates/scrapper/blog.html
+++ b/scrapper/templates/scrapper/blog.html
@@ -5,7 +5,64 @@
 <center>
 <div class="card white z-depth-5" style="width: 90%; padding: 20px;text-align: left;">
 <p class="flow-text" style="font-size: 42px;">Blog</p>
+
+
+
+<div class="row">
+  <!-- Modal Trigger -->
+  <a class="modal-trigger waves-effect waves-light btn" href="#modal1">Modal</a>
+
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal modal-fixed-footer" style="width: 85%; height: 95%;max-height: 95%;">
+    <div class="modal-content">
+      <h4>Modal Header</h4>
+      <iframe src="https://www.w3schools.com" style="width: 100%; height: 100%;padding: 0px;"></iframe>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Close</a>
+    </div>
+  </div>
+
+
+
+
+  <div class="col s12">
+    <div class="card horizontal teal">
+      <div class="card-image red center" style="padding: 20px;">
+        HEYHEY
+      </div>
+      <div class="card-stacked">
+        <div class="card-content flow-text">
+        <a href="#" class="right" style="color: white"><i class="material-icons">delete</i></a>
+        <a href="#" class="right" style="color: white"><i class="material-icons">launch</i></a>
+        <a href="#" class="right" style="color: white"><i class="material-icons">note_add</i></a>
+          <p>I am a very simple card. I am good at containing small bits of information.</p>
+        </div>
+        <div class="card-action">
+          <a href="#">This is a link</a>
+        </div>
+      </div>
+    </div>
+  </div>
+    <div class="col s12">
+    <div class="card horizontal teal">
+      <div class="card-image red center" style="padding: 20px;">
+        HEYHEY
+      </div>
+      <div class="card-stacked">
+        <div class="card-content flow-text">
+          <p>I am a very simple card. I am good at containing small bits of information.</p>
+        </div>
+        <div class="card-action">
+          <a href="#">This is a link</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 </div>
+
 </center>
 
 {% endblock %}
