--- a/scrapper/templates/scrapper/blog.html
+++ b/scrapper/templates/scrapper/blog.html
@@ -6,17 +6,17 @@
 <div class="card white z-depth-5" style="width: 90%; padding: 20px;text-align: left;">
 <p class="flow-text" style="font-size: 42px;">Blog</p>
 
+<a class="waves-effect waves-light btn get-blog">Get</a>
 
-
-<div class="row">
+<div class="row" id = "blogshow">
   <!-- Modal Trigger -->
-  <a class="modal-trigger waves-effect waves-light btn" href="#modal1">Modal</a>
+  <a class="modal-trigger waves-effect waves-light btn" href="#modal1" id="was">Modal</a>
 
   <!-- Modal Structure -->
   <div id="modal1" class="modal modal-fixed-footer" style="width: 85%; height: 95%;max-height: 95%;">
     <div class="modal-content">
       <h4>Modal Header</h4>
-      <iframe src="https://www.w3schools.com" style="width: 100%; height: 100%;padding: 0px;"></iframe>
+      <iframe src = "https://www.w3schools.com" style="width: 100%; height: 100%;padding: 0px;" id="asd"></iframe>
     </div>
     <div class="modal-footer">
       <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Close</a>
@@ -29,14 +29,14 @@
   <div class="col s12">
     <div class="card horizontal teal">
       <div class="card-image red center" style="padding: 20px;">
-        HEYHEY
+        #1
       </div>
       <div class="card-stacked">
         <div class="card-content flow-text">
         <a href="#" class="right" style="color: white"><i class="material-icons">delete</i></a>
         <a href="#" class="right" style="color: white"><i class="material-icons">launch</i></a>
         <a href="#" class="right" style="color: white"><i class="material-icons">note_add</i></a>
-          <p>I am a very simple card. I am good at containing small bits of information.</p>
+          <p>This is an Example card.</p>
         </div>
         <div class="card-action">
           <a href="#">This is a link</a>
@@ -44,23 +44,6 @@
       </div>
     </div>
   </div>
-    <div class="col s12">
-    <div class="card horizontal teal">
-      <div class="card-image red center" style="padding: 20px;">
-        HEYHEY
-      </div>
-      <div class="card-stacked">
-        <div class="card-content flow-text">
-          <p>I am a very simple card. I am good at containing small bits of information.</p>
-        </div>
-        <div class="card-action">
-          <a href="#">This is a link</a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-
 </div>
 
 </center>
