#20 #22 Random blogs fetch from top 500 with fadein/out feature

--- a/home/templates/home/main_home.html
+++ b/home/templates/home/main_home.html
@@ -56,6 +56,23 @@
     <br>
     <hr><br><br>    
     </div>
+<div class="row">
+        <div class="container">
+      <div class="col s6 m12 l12 flow-text center">
+      <b><p>Read blogs on the go</p></b>
+      <p style="font-size: 20px">With many sources we provide famous blogs which are worth reading. Rather than loading various tabs we provide feature to read blog on the same page with iframe</p>
+      <a href = "#">Learn more about this ></a>
+      </div>
+    </div>
+    </div>
+
+
+
+            <div class="container">
+    <br>
+    <br>
+    <hr><br><br>    
+    </div>
     <div class="row">
     <center><p class="flow-text" style="font-size: 42px">Get data from famous sources</p></center>
     <br><br>
@@ -63,6 +80,7 @@
     <div class="col s12 m6 l3 center"><p><img src="https://i.stack.imgur.com/MybMA.png" width="50%" height="50%" /></p></div>
     <div class="col s12 m6 l3 center"><p><img src="https://s3.amazonaws.com/codechef_shared/sites/all/themes/abessive/logo.png" width="50%" height="50%" /></p></div>
     <div class="col s12 m6 l3 center"><p><img src="http://st.codeforces.com/s/10438/images/codeforces-logo-with-telegram.png" width="50%" height="50%" /></p></div>
+    <div class="col s12 m6 l3 center"><p><img src="http://www.ycombinator.com/images/ycombinator-logo-fb889e2e.png" width="30%" height="30%" /></p></div>
     <br>
     <br>
   </div>
