--- a/scrapper/templates/scrapper/blog.html
+++ b/scrapper/templates/scrapper/blog.html
@@ -7,39 +7,38 @@
 <p class="flow-text" style="font-size: 42px;">Blog</p>
 
 <a class="waves-effect waves-light btn get-blog">Get</a>
+<a href="javascript:void(0);" class="right refresh get-blog tooltipped" style="color: black" data-position="top" data-delay="50" data-tooltip="Refresh"><i class="small material-icons">replay</i></a>
 
 <div class="row" id = "blogshow">
   <!-- Modal Trigger -->
-  <a class="modal-trigger waves-effect waves-light btn" href="#modal1" id="was">Modal</a>
-
   <!-- Modal Structure -->
   <div id="modal1" class="modal modal-fixed-footer" style="width: 85%; height: 95%;max-height: 95%;">
     <div class="modal-content">
       <h4>Modal Header</h4>
-      <iframe src = "https://www.w3schools.com" style="width: 100%; height: 100%;padding: 0px;" id="asd"></iframe>
+      <iframe src = "" style="width: 100%; height: 100%;padding: 0px;" id="asd"></iframe>
     </div>
     <div class="modal-footer">
-      <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Close</a>
+      <a href="javascript:void(0);" class="modal-action modal-close waves-effect waves-green btn-flat ">Close</a>
     </div>
   </div>
 
 
 
 
-  <div class="col s12">
+  <div class="col s12 blog-content">
     <div class="card horizontal teal">
       <div class="card-image red center" style="padding: 20px;">
-        #1
+        Upvotes
       </div>
       <div class="card-stacked">
         <div class="card-content flow-text">
-        <a href="#" class="right" style="color: white"><i class="material-icons">delete</i></a>
-        <a href="#" class="right" style="color: white"><i class="material-icons">launch</i></a>
-        <a href="#" class="right" style="color: white"><i class="material-icons">note_add</i></a>
-          <p>This is an Example card.</p>
+        <a href="javascript:void(0);" class="right" style="color: white"><i class="material-icons">delete</i></a>
+        <a href="javascript:void(0);" class="right" style="color: white"><i class="material-icons">launch</i></a>
+        <a href="javascript:void(0);" class="right" style="color: white"><i class="material-icons">note_add</i></a>
+          <p>This body will show you the title of the blog</p>
         </div>
         <div class="card-action">
-          <a href="#">This is a link</a>
+          <a href="javascript:void(0);">This is a link</a>
         </div>
       </div>
     </div>
