#23 Save answer model and delete working function added

--- a/scrapper/templates/scrapper/blog.html
+++ b/scrapper/templates/scrapper/blog.html
@@ -4,6 +4,7 @@
 <br><br>
 <center>
 <div class="card white z-depth-5" style="width: 90%; padding: 20px;text-align: left;">
+<a class="flow-text right" style="font-size: 14px;" href="/later-blog">view saved blog</a>
 <p class="flow-text" style="font-size: 42px;">Blog</p>
 
 <a class="waves-effect waves-light btn get-blog">Get</a>
